src/passes/snapshots/lumina2__passes__ast_gen__test__external_function_parameters.snap
---
source: src/passes/ast_gen.rs
expression: "extern fn some_function(parameter: u8);"
---
FunctionDeclaration {
    id: AstId(
        0,
    ),
    signature: FunctionSignature {
        name: StringId(
            0,
        ),
        parameters: [
            FunctionParameter {
                name: StringId(
                    1,
                ),
                ty: AstTypeId(
                    0,
                ),
            },
        ],
        return_ty: None,
    },
    implementation: None,
}
