src/passes/snapshots/lumina2__passes__ast_gen__test__external_function_return.snap
---
source: src/passes/ast_gen.rs
expression: extern fn some_function() -> bool;
---
FunctionDeclaration {
    id: AstId(
        0,
    ),
    signature: FunctionSignature {
        name: StringId(
            0,
        ),
        parameters: [],
        return_ty: Some(
            AstTypeId(
                0,
            ),
        ),
    },
    implementation: None,
}
