src/passes/snapshots/lumina2__passes__ast_gen__test__external_function_simple.snap
---
source: src/passes/ast_gen.rs
expression: extern fn some_function();
---
FunctionDeclaration {
    signature: FunctionSignature {
        name: StringId(
            0,
        ),
        parameters: [],
        return_ty: None,
    },
    implementation: None,
}
