src/passes/snapshots/lumina2__passes__ast_gen__test__field_unnamed.snap
---
source: src/passes/ast_gen.rs
expression: a.1
---
Expression {
    id: AstId(
        1,
    ),
    kind: Field(
        Field {
            lhs: ExpressionId(
                0,
            ),
            field: Unnamed(
                1,
            ),
        },
    ),
}
