src/passes/snapshots/lumina2__passes__ast_gen__test__if_else.snap
---
source: src/passes/ast_gen.rs
expression: "if condition { then } else { otherwise }"
---
If(
    If {
        conditions: [
            (
                ExpressionId(
                    0,
                ),
                BlockId(
                    0,
                ),
            ),
        ],
        otherwise: Some(
            BlockId(
                1,
            ),
        ),
    },
)
