src/passes/snapshots/lumina2__passes__ast_gen__test__if_else_if.snap
---
source: src/passes/ast_gen.rs
expression: "if condition { then } else if thing { then_2 }"
---
Expression {
    id: AstId(
        6,
    ),
    kind: If(
        If {
            conditions: [
                (
                    ExpressionId(
                        0,
                    ),
                    BlockId(
                        0,
                    ),
                ),
                (
                    ExpressionId(
                        2,
                    ),
                    BlockId(
                        1,
                    ),
                ),
            ],
            otherwise: None,
        },
    ),
}
