src/passes/snapshots/lumina2__passes__ast_gen__test__if_simple.snap
---
source: src/passes/ast_gen.rs
expression: "if condition { then }"
---
If(
    If {
        conditions: [
            (
                ExpressionId(
                    0,
                ),
                BlockId(
                    0,
                ),
            ),
        ],
        otherwise: None,
    },
)
