src/passes/snapshots/lumina2__passes__ast_gen__test__literal_bool.snap
---
source: src/passes/ast_gen.rs
expression: "true"
---
Literal(
    Boolean(
        true,
    ),
)
