src/passes/snapshots/lumina2__passes__ast_gen__test__literal_integer.snap
---
source: src/passes/ast_gen.rs
expression: "123"
---
Literal(
    Integer(
        123,
    ),
)
