src/passes/snapshots/lumina2__passes__ast_gen__test__trait_declaration_empty.snap
---
source: src/passes/ast_gen.rs
expression: "trait MyTrait {}"
---
Trait {
    annotations: [],
    name: StringId(
        0,
    ),
    methods: {},
}
